--- a/bookingPage.html
+++ b/bookingPage.html
@@ -5,12 +5,13 @@
             <div class="flex flex-col w-[100%] max-w-[1280px] mr-[auto] ml-[auto] pr-[32px] pl-[32px]">
                 <div class="flex flex-col items-stretch">
                     <div class="flex flex-row gap-[12px] justify-between items-center">
-                        <div class="flex items-center justify-center gap-[12px]"><img
-                                src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
-                                srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
-                                sizes="(max-width: 24px) 100vw, 24px" class="w-[auto] h-[40px] rounded-[8px]"> <span
-                                class="block font-montserrat font-semibold text-[20px] text-opacity-[100%] text-[#ffffff]"
-                                style="">Football Field Booking</span> </div>
+                        <div class="flex items-center justify-center gap-[12px]"><a
+                                class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-white text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[transparent] border-[1px] border-solid inline-block focus:outline-none gap-[12px]"><img
+                                    src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
+                                    srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
+                                    sizes="(max-width: 24px) 100vw, 24px" class="w-[auto] h-[40px] rounded-[8px]"> <span
+                                    class="block font-montserrat font-semibold text-[20px] text-opacity-[100%] text-[#ffffff]"
+                                    style="">Football Field Booking</span> </a> </div>
                         <div class="flex flex-col items-start">
                             <div class="hidden sm:flex gap-[32px] items-center"><a
                                     class="no-underline focus:outline-none text-opacity-[75%] text-[14px] text-[#ffffff]"
@@ -19,9 +20,9 @@
                                     style="">Login</a> <a
                                     class="no-underline focus:outline-none text-opacity-[75%] text-[14px] text-[#ffffff]"
                                     style="">Register</a>
-                                <h1 class="block text-opacity-[100%] text-[#ffffff] font-medium text-[18px]" style="">
+                                <h1 class="block text-[#ffffff] font-medium text-[18px] text-opacity-[75%]" style="">
                                     [Logged in name]</h1> <button type="button" id="logout-submit-button"
-                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-white text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[1px] border-solid inline-block focus:outline-none border-opacity-[100%] border-[#ffffff]"><span
+                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[1px] border-solid inline-block focus:outline-none border-opacity-[100%] border-[#ffffff] text-[#ffffff] text-opacity-[75%]"><span
                                         class="" style="">Logout</span> </button>
                             </div>
                             <div class="space-x-[32px] flex sm:hidden"><button type="button"
@@ -96,7 +97,7 @@
         </div>
         <div id="form" class="font-energetic bg-black md:pt-8 sm:pt-8 pt-6 lg:pt-12 md:pb-8 sm:pb-8 pb-6 lg:pb-12">
             <div class="max-w-screen-2xl ml-auto mr-auto md:pl-8 sm:pl-4 pl-4 lg:pl-8 md:pr-8 sm:pr-4 pr-4 lg:pr-8">
-                <div class="md:mb-16 sm:mb-10 mb-10 lg:mb-16">
+                <div class="md:mb-16 sm:mb-10 mb-10 lg:mb-[12px]">
                     <h2
                         class="md:mb-6 sm:mb-4 mb-4 lg:mb-6 text-center md:text-2xl sm:text-2xl text-2xl lg:text-3xl font-bold text-gray-400">
                         Book Your Field</h2>
@@ -109,44 +110,44 @@
                             class="block text-opacity-[100%] text-[#ffffff] text-[20px] underline capitalize italic font-thin"
                             style="">Login now!</a> </div>
                 </div>
-                <form
-                    class="max-w-screen-md mb-0 ml-auto mr-auto grid md:grid-cols-2 sm:grid-cols-2 grid-cols-2 lg:grid-cols-2 gap-[16px]">
+                <form class="pr-[260px] pl-[260px] grid grid-cols-2 gap-[18px]">
                     <div
                         class="text-[14px] text-[#991b1b] pt-[12px] pr-[20px] pb-[12px] pl-[20px] rounded-[6px] bg-opacity-100 bg-[#fca5a5] mb-[24px] hidden">
                         <span class="text-[14px] block">Something went wrong! Try submitting form once again.</span>
                     </div>
-                    <div class="block"><label
-                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-base text-gray-400">Field
-                            Type</label> <input type="text" name="oekk1r6on" placeholder="Text" autocomplete="off"
+                    <div class="block"><span
+                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-[16px] text-gray-400"
+                            style="">Date</span> <input type="date" name="fld7rPYeNQ0N6HywB" autocomplete="off"
                             class="cursor-default focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] border bg-black text-gray-400 outline-none w-[100%] pl-[12px] pr-[12px] pt-[8px] pb-[8px] rounded-tl-[4px] rounded-tr-[4px] rounded-bl-[4px] rounded-br-[4px] border-t-[1px] border-r-[1px] border-b-[1px] border-l-[1px]">
                     </div>
-                    <div class="block"><label
-                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-base text-gray-400">Date</label>
-                        <input type="text" name="dobxms0pk" placeholder="Text" autocomplete="off"
-                            class="cursor-default focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] w-full border bg-black text-gray-400 pl-3 pr-3 pt-2 pb-2 outline-none">
-                    </div>
-                    <div class="block"><label
-                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-base text-gray-400">Time</label>
-                        <input type="text" name="h9utkrwc3" placeholder="Text" autocomplete="off"
-                            class="cursor-default focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] w-full border bg-black text-gray-400 pl-3 pr-3 pt-2 pb-2 outline-none">
-                    </div>
-                    <div class="block"><label
-                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-base text-gray-400">Duration</label>
-                        <input type="text" name="k4po4vaj6" placeholder="Text" autocomplete="off"
-                            class="cursor-default focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] w-full border bg-black text-gray-400 pl-3 pr-3 pt-2 pb-2 outline-none">
-                    </div>
-                    <div class="flex items-center justify-between md:col-span-2 sm:col-span-2 col-span-2 lg:col-span-2">
-                        <button type="button" id="booking-submit-button"
-                            class="bg-orange-500 hover:bg-orange-700 active:bg-orange-700 inline-block transition duration-100 focus-visible:ring text-white disabled:bg-gray-400 rounded-lg pl-8 pr-8 pt-3 pb-3 text-center md:text-base sm:text-sm text-sm lg:text-base font-semibold outline-none"><span
-                                class="text-[14px] block">Confirm Booking</span> </button> </div>
+                    <div class="block"><span
+                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-[16px] text-gray-400"
+                            style="">Field Type</span> <select
+                            class="focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] border bg-black text-gray-400 outline-none w-[100%] pl-[12px] pr-[12px] pt-[8px] pb-[8px] rounded-tl-[4px] rounded-tr-[4px] rounded-bl-[4px] rounded-br-[4px] border-t-[1px] border-r-[1px] border-b-[1px] border-l-[1px]">
+                            <option>Select...</option>
+                        </select> </div>
+                    <div class="block"><span
+                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-[16px] text-gray-400"
+                            style="">Time Start</span> <select
+                            class="focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] border bg-black text-gray-400 outline-none w-[100%] pl-[12px] pr-[12px] pt-[8px] pb-[8px] rounded-tl-[4px] rounded-tr-[4px] rounded-bl-[4px] rounded-br-[4px] border-t-[1px] border-r-[1px] border-b-[1px] border-l-[1px]">
+                            <option>Select...</option>
+                        </select> </div>
+                    <div class="block"><span
+                            class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-[16px] text-gray-400"
+                            style="">Duration</span> <select
+                            class="focus:outline-none rounded ring-orange-300 transition duration-100 focus:ring border-opacity-[15%] placeholder-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] border bg-black text-gray-400 outline-none w-[100%] pl-[12px] pr-[12px] pt-[8px] pb-[8px] rounded-tl-[4px] rounded-tr-[4px] rounded-bl-[4px] rounded-br-[4px] border-t-[1px] border-r-[1px] border-b-[1px] border-l-[1px]">
+                            <option>Select...</option>
+                        </select> </div> <button type="button" id="submit-booking"
+                        class="bg-orange-500 hover:bg-orange-700 active:bg-orange-700 inline-block transition duration-100 focus-visible:ring text-white disabled:bg-gray-400 rounded-lg text-center md:text-base sm:text-sm text-sm lg:text-[16px] font-semibold outline-none pl-[32px] pr-[32px] pt-[12px] pb-[12px] w-[180px]"><span
+                            class="" style="">Confirm</span> </button>
                 </form>
-            </div>
+            </div> <span class="text-[14px] block" style="">[Logged in email address]</span>
         </div>
         <div class="font-energetic bg-black md:pt-10 sm:pt-10 pt-4 lg:pt-12">
             <div class="max-w-screen-2xl ml-auto mr-auto md:pl-8 sm:pl-4 pl-4 lg:pl-8 md:pr-8 sm:pr-4 pr-4 lg:pr-8">
                 <div
-                    class="border-t mb-16 grid md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-6 md:gap-12 sm:gap-12 gap-12 lg:gap-8 md:pt-10 sm:pt-10 pt-10 lg:pt-12">
-                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-2">
+                    class="border-t mb-16 md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-2 md:gap-12 sm:gap-12 gap-12 lg:gap-[130px] md:pt-10 sm:pt-10 pt-10 lg:pt-12 flex">
+                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-full pl-[45px]">
                         <div class="mb-4 md:mt-0 sm:mt-0 mt-0 lg:-mt-2 flex items-center gap-[8px]"><img
                                 src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
                                 srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
@@ -156,10 +157,10 @@
                         <p class="text-gray-400 mb-6 md:pr-8 sm:pr-8 pr-0 lg:pr-8">© 2024 Football Field Booking. All
                             rights reserved.</p>
                     </div>
+                    <div class="block"></div>
                     <div class="block">
-                        <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
+                        <div class="text-gray-400 font-bold uppercase tracking-widest mb-[16px] pl-[116px]"><span
                                 class="text-[14px] block">QUICK LINKS</span> </div>
-                        <div class="flex flex-col gap-4"></div>
                     </div>
                     <div class="block">
                         <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
@@ -177,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-t text-gray-400 pt-8 pb-8 text-center text-sm"><span
+                <div class="border-t text-gray-400 text-center text-sm h-[auto] pt-[32px] pb-[32px]"><span
                         class="text-[14px] block">Football Field Booking © 2024</span> </div>
             </div>
         </div>
