--- a/homePage.html
+++ b/homePage.html
@@ -20,11 +20,11 @@
                                     style="">Login</a> <a
                                     class="no-underline focus:outline-none text-opacity-[75%] text-[14px] text-[#ffffff]"
                                     style="">Register</a> <a
-                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-white text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[transparent] border-[1px] border-solid inline-block focus:outline-none"><span
+                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[transparent] border-[1px] border-solid inline-block focus:outline-none text-[#ffffff] text-opacity-[75%]"><span
                                         class="" style="">Drink Checkout</span> </a>
-                                <h1 class="block text-opacity-[100%] text-[#ffffff] font-medium text-[18px]" style="">
+                                <h1 class="block text-[#ffffff] font-medium text-[18px] text-opacity-[75%]" style="">
                                     [Logged in name]</h1> <button type="button" id="logout-submit-button"
-                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-white text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[1px] border-solid inline-block focus:outline-none border-opacity-[100%] border-[#ffffff]"><span
+                                    class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[1px] border-solid inline-block focus:outline-none border-opacity-[100%] border-[#ffffff] text-[#ffffff] text-opacity-[75%]"><span
                                         class="" style="">Logout</span> </button>
                             </div>
                             <div class="space-x-[32px] flex sm:hidden"><button type="button"
@@ -139,11 +139,12 @@
                 </div>
             </div>
         </div>
+        <div class="font-energetic bg-black md:pt-10 sm:pt-10 pt-4 lg:pt-12"></div>
         <div class="font-energetic bg-black md:pt-10 sm:pt-10 pt-4 lg:pt-12">
             <div class="max-w-screen-2xl ml-auto mr-auto md:pl-8 sm:pl-4 pl-4 lg:pl-8 md:pr-8 sm:pr-4 pr-4 lg:pr-8">
                 <div
-                    class="border-t mb-16 grid md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-6 md:gap-12 sm:gap-12 gap-12 lg:gap-8 md:pt-10 sm:pt-10 pt-10 lg:pt-12">
-                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-2">
+                    class="border-t mb-16 md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-2 md:gap-12 sm:gap-12 gap-12 lg:gap-[130px] md:pt-10 sm:pt-10 pt-10 lg:pt-12 flex">
+                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-full pl-[45px]">
                         <div class="mb-4 md:mt-0 sm:mt-0 mt-0 lg:-mt-2 flex items-center gap-[8px]"><img
                                 src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
                                 srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
@@ -153,10 +154,10 @@
                         <p class="text-gray-400 mb-6 md:pr-8 sm:pr-8 pr-0 lg:pr-8">© 2024 Football Field Booking. All
                             rights reserved.</p>
                     </div>
+                    <div class="block"></div>
                     <div class="block">
-                        <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
+                        <div class="text-gray-400 font-bold uppercase tracking-widest mb-[16px] pl-[116px]"><span
                                 class="text-[14px] block">QUICK LINKS</span> </div>
-                        <div class="flex flex-col gap-4"></div>
                     </div>
                     <div class="block">
                         <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
@@ -174,7 +175,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-t text-gray-400 pt-8 pb-8 text-center text-sm"><span
+                <div class="border-t text-gray-400 text-center text-sm h-[auto] pt-[32px] pb-[32px]"><span
                         class="text-[14px] block">Football Field Booking © 2024</span> </div>
             </div>
         </div>
