--- a/loginPage.html
+++ b/loginPage.html
@@ -5,12 +5,13 @@
             <div class="flex flex-col w-[100%] max-w-[1280px] mr-[auto] ml-[auto] pr-[32px] pl-[32px]">
                 <div class="flex flex-col items-stretch">
                     <div class="flex flex-row gap-[12px] justify-between items-center">
-                        <div class="flex items-center justify-center gap-[12px]"><img
-                                src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
-                                srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
-                                sizes="(max-width: 24px) 100vw, 24px" class="w-[auto] h-[40px] rounded-[8px]"> <span
-                                class="block font-montserrat font-semibold text-[20px] text-opacity-[100%] text-[#ffffff]"
-                                style="">Football Field Booking</span> </div>
+                        <div class="flex items-center justify-center gap-[12px]"><a
+                                class="flex flex-row items-center justify-center bg-[#000000] bg-opacity-[100%] text-white text-[14px] tracking-[0.025em] pt-[10px] pr-[20px] pb-[10px] pl-[20px] rounded-[8px] border-[transparent] border-[1px] border-solid inline-block focus:outline-none gap-[12px]"><img
+                                    src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
+                                    srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
+                                    sizes="(max-width: 24px) 100vw, 24px" class="w-[auto] h-[40px] rounded-[8px]"> <span
+                                    class="block font-montserrat font-semibold text-[20px] text-opacity-[100%] text-[#ffffff]"
+                                    style="">Football Field Booking</span> </a> </div>
                         <div class="flex flex-col items-start">
                             <div class="hidden sm:flex gap-[32px] items-center"><a
                                     class="no-underline focus:outline-none text-opacity-[75%] text-[14px] text-[#ffffff]"
@@ -37,7 +38,7 @@
         <section class="flex flex-col pb-[80px] pt-[80px] bg-[#000000] bg-opacity-[100%]">
             <div class="font-energetic bg-black md:pt-8 sm:pt-8 pt-6 lg:pt-[48px] md:pb-8 sm:pb-8 pb-6 lg:pb-[149px]">
                 <div class="max-w-screen-2xl ml-auto mr-auto md:pl-8 sm:pl-4 pl-4 lg:pl-8 md:pr-8 sm:pr-4 pr-4 lg:pr-8">
-                    <div class="md:mb-16 sm:mb-10 mb-10 lg:mb-[64px] block" style="">
+                    <div class="md:mb-16 sm:mb-10 mb-10 lg:mb-[64px] block">
                         <h2
                             class="md:mb-6 sm:mb-4 mb-4 lg:mb-6 text-center md:text-2xl sm:text-2xl text-2xl lg:text-[30px] font-bold text-gray-400">
                             Login</h2>
@@ -57,8 +58,7 @@
                                         </div>
                                     </label> <input type="email" name="ycode_664530656a8bb" placeholder="Email address"
                                         autocomplete="off"
-                                        class="cursor-default focus:outline-none bg-white text-[14px] tracking-[0.025em] rounded-[8px] border-solid border-[1px] border-[#000000] border-opacity-[15%] placeholder-[#000000] text-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] pt-[8px] pb-[8px] pr-[12px] pl-[12px] w-[100%]">
-                                    <nordpass-icon></nordpass-icon>
+                                        class="cursor-default focus:outline-none bg-white text-[14px] tracking-[0.025em] rounded-[8px] border-solid border-[1px] border-[#000000] border-opacity-[15%] placeholder-[#000000] text-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] pt-[8px] pb-[8px] w-[100%] pr-[24px] pl-[24px]">
                                 </div>
                                 <div class="block"><label
                                         class="inline-block mb-2 md:text-base sm:text-base text-sm lg:text-[16px] text-gray-400"
@@ -69,21 +69,18 @@
                                         </div>
                                     </label> <input type="password" name="ycode_664530656b5a1" placeholder="Password"
                                         autocomplete="off"
-                                        class="cursor-default focus:outline-none bg-white text-[14px] tracking-[0.025em] rounded-[8px] border-solid border-[1px] border-[#000000] border-opacity-[15%] placeholder-[#000000] text-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] pt-[8px] pb-[8px] w-[100%] pr-[22px] pl-[22px]"
-                                        style="">
-                                    <nordpass-icon></nordpass-icon>
+                                        class="cursor-default focus:outline-none bg-white text-[14px] tracking-[0.025em] rounded-[8px] border-solid border-[1px] border-[#000000] border-opacity-[15%] placeholder-[#000000] text-[#000000] placeholder-opacity-[50%] focus:border-[#000000] focus:border-opacity-[50%] disabled:opacity-[50%] pt-[8px] pb-[8px] w-[100%] pr-[35px] pl-[35px]">
                                 </div>
                             </div>
                             <div
-                                class="flex items-center justify-between md:col-span-2 sm:col-span-2 col-span-2 lg:col-span-2 gap-[12px]">
-                                <button type="button" id="login-submit-button"
-                                    class="bg-orange-500 hover:bg-orange-700 active:bg-orange-700 inline-block transition duration-100 focus-visible:ring text-white disabled:bg-gray-400 rounded-lg text-center md:text-base sm:text-sm text-sm lg:text-[16px] font-semibold outline-none pl-[32px] pr-[32px] pt-[12px] pb-[12px]"><span
-                                        class="" style="">Login</span> </button>
+                                class="flex items-center justify-between md:col-span-2 sm:col-span-2 col-span-2 lg:col-span-2 gap-[18px] flex-col">
                                 <div class="text-opacity-[100%] text-[#ffffff]"><span
                                         class="text-[14px] text-opacity-[100%] text-[#ffffff]">Don't have an
                                         account?</span> <a
                                         class="underline focus:outline-none text-[14px] text-opacity-[100%] text-[#ffffff]">Sign
-                                        up</a> </div>
+                                        up</a> </div> <button type="button" id="login-submit-button"
+                                    class="bg-orange-500 hover:bg-orange-700 active:bg-orange-700 inline-block transition duration-100 focus-visible:ring text-white disabled:bg-gray-400 rounded-lg text-center md:text-base sm:text-sm text-sm lg:text-[16px] font-semibold outline-none pl-[32px] pr-[32px] pt-[12px] pb-[12px]"><span
+                                        class="" style="">Login</span> </button>
                             </div>
                         </form>
                     </div>
@@ -93,8 +90,8 @@
         <div class="font-energetic bg-black md:pt-10 sm:pt-10 pt-4 lg:pt-12">
             <div class="max-w-screen-2xl ml-auto mr-auto md:pl-8 sm:pl-4 pl-4 lg:pl-8 md:pr-8 sm:pr-4 pr-4 lg:pr-8">
                 <div
-                    class="border-t mb-16 grid md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-6 md:gap-12 sm:gap-12 gap-12 lg:gap-8 md:pt-10 sm:pt-10 pt-10 lg:pt-12">
-                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-2">
+                    class="border-t mb-16 md:grid-cols-4 sm:grid-cols-2 grid-cols-2 lg:grid-cols-2 md:gap-12 sm:gap-12 gap-12 lg:gap-[130px] md:pt-10 sm:pt-10 pt-10 lg:pt-12 flex">
+                    <div class="md:col-span-full sm:col-span-full col-span-full lg:col-span-full pl-[45px]">
                         <div class="mb-4 md:mt-0 sm:mt-0 mt-0 lg:-mt-2 flex items-center gap-[8px]"><img
                                 src="https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png"
                                 srcset="https://assets.ycodeapp.com/assets/app63991/images/8EZaVDuWuf4krZm3l4DkxWekBrbRAXpDHEIPLBGA.png 800w, https://assets.ycodeapp.com/assets/app63991/images/B4S09AqLGz7g5yO4MbVi99mR9dDT0DWYFvuuChs7.png 500w, https://assets.ycodeapp.com/assets/app63991/images/X54LDmrpi6ODzfoyaQJ484PqDNK1qZpldSiSzPsV.png 150w, https://assets.ycodeapp.com/assets/app63991/Images/ranyVvLAgURB0Dc7eUjlAV67YKL0c8CAFCBThaE0.png 1024w"
@@ -104,10 +101,10 @@
                         <p class="text-gray-400 mb-6 md:pr-8 sm:pr-8 pr-0 lg:pr-8">© 2024 Football Field Booking. All
                             rights reserved.</p>
                     </div>
+                    <div class="block"></div>
                     <div class="block">
-                        <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
+                        <div class="text-gray-400 font-bold uppercase tracking-widest mb-[16px] pl-[116px]"><span
                                 class="text-[14px] block">QUICK LINKS</span> </div>
-                        <div class="flex flex-col gap-4"></div>
                     </div>
                     <div class="block">
                         <div class="text-gray-400 mb-4 font-bold uppercase tracking-widest"><span
